--- a/ChessGame/ChessGame.csproj
+++ b/ChessGame/ChessGame.csproj
@@ -50,6 +50,8 @@
     <Compile Include="tabuleiro\Tabuleiro.cs" />
     <Compile Include="tabuleiro\TabuleiroException.cs" />
     <Compile Include="Tela.cs" />
+    <Compile Include="xadrez\Partida.cs" />
+    <Compile Include="xadrez\PosicaoXadrez.cs" />
     <Compile Include="xadrez\Rei.cs" />
     <Compile Include="xadrez\Torre.cs" />
   </ItemGroup>
